objects/Media_Order__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <summaryForeignKey>Media_Order_Item__c.Media_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Media_Bucket__c</fullName>
        <label>Media Bucket</label>
        <referenceTo>Media_Bucket__c</referenceTo>
        <relationshipLabel>Media Orders</relationshipLabel>
        <relationshipName>Media_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Media_Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Discount</label>
        <referenceTo>Media_Discount__c</referenceTo>
        <relationshipLabel>Media Orders</relationshipLabel>
        <relationshipName>Media_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Media Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Media Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Discount_Limit_Behavior</fullName>
        <active>false</active>
        <errorConditionFormula>Count__c &lt; 3 &amp;&amp;  Media_Discount__c != null &amp;&amp; Media_Discount__r.Percent__c &gt; 00.20</errorConditionFormula>
        <errorMessage>Discount percent cannot exceed 20% for order with less than 3 products</errorMessage>
    </validationRules>
</CustomObject>